# receipt_ocr

./: README.md  pyproject.toml
repo/: AI_CONTRACT.md
src/receipt_tsv/: __init__.py  exporter.py  models.py  ocr.py  parser.py
tests/: test_exporter.py  test_parser.py
