[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-tsv"
version = "0.1.0"
description = "Parse OCR receipt text and export TSV."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

